--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Lista de Publicaciones</h1>
-    <ul>
-        {% for post in posts %}
-            <li>{{post.titulo}} - {{fecha_publicacion}}</li>
-        {% endfor %}
-    </ul>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</body>
-</html>
+{% extends 'myapp/base.html' %}
+
+{% block title %}Blog{% endblock %}
+
+{% block content %}
+  <h1 class="mb-4 text-center">Lista de Publicaciones</h1>
+  <ul class="list-group">
+    {% for post in posts %}
+    <li class="list-group-item">
+      <a href="#" class="text-decoration-none text-reset">
+        <div class="d-flex flex-column">
+          <h5 class="fw-bold mb-1">{{ post.titulo }}</h5>
+          <p class="mb-1">{{ post.contenido }}</p>
+          <small class="text-muted">Publicado el {{ post.fecha_publicacion }}</small>
+        </div>
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+{% endblock %}
