--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Django App</title>
-</head>
-<body>
-    <h1>Hola Django!!</h1>
-    <p>{{ mensaje }}</p>
-</body>
-</html>
+{% extends 'myapp/base.html' %}
+
+{% block title %}Inicio{% endblock %}
+
+{% block content %}
+  <div class="text-center">
+    <h1 class="display-4 text-primary mb-4">¡Hola Django!</h1>
+    <p class="lead">{{ mensaje }}</p>
+  </div>
+{% endblock %}
