Modificaciones en blog y agregado de Main

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,12 @@
-{% extends 'myapp/base.html' %}
+{% extends 'Main/base.html' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}
+    Publicaciones
+{% endblock %}
+
+{% block content_title %}
+    Lista de Publicaciones
+{% endblock content_title %}
 
 {% block content %}
   <h1 class="mb-4 text-center">Lista de Publicaciones</h1>
