--- a/Main/templates/Main/index.html
+++ b/Main/templates/Main/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}
     Inicio
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
 <div class="card bg-light border-0 shadow-sm">
